add the production website css to make sure there is no overlap

--- a/Career-en.html
+++ b/Career-en.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en" dir="ltr">
+<!--<![endif]-->
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,1,0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@24,500,1,0" />
+<meta charset="utf-8">
+<!--[if IE]>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <![endif]-->
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="format-detection" content="telephone=no">
+<meta name="description" content="The Saline Water Conversion Corporation (SWCC) is a Saudi Government Corporation responsible for the desalination of seawater producing and supplying various regions in the Kingdom with desalinated water. The corporation was established by royal decree dated 20/08/1394 H, corresponding to 07/09/1974 H, as an independent government corporation.">
+<meta name="keywords" content="SWCC, Saline Water Conversion Corporation, Water Desalination, Saudi Arabia, Largest In The World">
+<meta name="author" content="Arabic Technologies">
+<title>Career in SWCC - SWCC</title>
+
+<meta property="og:type" content="website">
+<meta property="og:url" content="~/en/Career">
+<meta property="og:title" content="Career in SWCC - SWCC">
+<meta property="og:description" content="Inspired by excellence, SWCC pays great attention to attracting and hiring employees with outstanding performance by providing rewarding and challenging professional opportunities. Taking such employment options to further steps, SWCC is particularly keen on giving the existing and potential staff commensurate opportunities to be success partners.">
+<meta property="og:image" content="https://www.swcc.gov.sa/media/images/Career_EN.png">
+
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="~/en/Career">
+<meta property="twitter:title" content="Career in SWCC - SWCC">
+<meta property="twitter:description" content="Inspired by excellence, SWCC pays great attention to attracting and hiring employees with outstanding performance by providing rewarding and challenging professional opportunities. Taking such employment options to further steps, SWCC is particularly keen on giving the existing and potential staff commensurate opportunities to be success partners.">
+<meta property="twitter:image" content="https://www.swcc.gov.sa/media/images/Career_EN.png">
+
+<link rel="preload" href="/fonts/SWCC-2-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+<link rel="preload" href="/fonts/SWCC-3-Medium.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+<link rel="preload" href="/fonts/SWCC-4-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/bundleLTR.min.css">
+<link rel="stylesheet" href="Style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,1,0" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@24,500,1,0" />
 </head>
 <body>
 
